# flux-explorer-browser

./: .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json
Oficial_flux/: index.html
Oficial_flux/assets/css/: flux.css
Oficial_flux/assets/js/: main.js
Oficial_flux/docs/: architecture.html  changelog.html  features.html  getting-started.html  index.html
assets/: flux_browser.rc
flux-backend/: flux.db-shm  flux.db-wal  package-lock.json  package.json
flux-backend/prisma/: flux.db  schema.prisma
flux-backend/src/: index.ts
flux-backend/src/config/: database.ts  db.ts  env.ts  prisma.ts  security.ts
flux-backend/src/controllers/: aiHistoryController.ts  authController.ts  favoritesController.ts  historyController.ts  mediaController.ts  searchController.ts  statsController.ts  tabController.ts  tabGroupController.ts  translationController.ts  userController.ts  voiceController.ts
flux-backend/src/middleware/: auth.ts
flux-engine/: Cargo.toml  build.rs
flux-engine/src/: lib.rs  main.rs
flux-engine/src/api/: mod.rs
flux-engine/src/dom/: mod.rs
flux-engine/src/extractor/: mod.rs
flux-engine/src/fetcher/: mod.rs
flux-engine/src/js/: mod.rs
flux-engine/src/layout/: inline.rs  mod.rs
flux-engine/src/paint/: mod.rs
flux-engine/src/parsing/: parser.rs  tokenizer.rs
flux-engine/src/ranker/: mod.rs
flux-engine/src/renderer/: font.rs  mod.rs  soft.rs
flux-engine/src/security/: mod.rs
flux-engine/src/style/: cascade.rs  css.rs  mod.rs  ua.rs
scripts/: build-backend.ps1  download-yt-dlp.ps1
searxng/: limiter.toml  settings.yml
src/: App.tsx  index.css  main.tsx
src/constants/: browser.ts
src/contexts/: AuthProvider.tsx  FavoritesContext.tsx  SettingsContext.tsx  ThemeContext.tsx  auth-context.ts  theme-definitions.ts
src/hooks/: useBrowserNavigation.ts  useMediaGallery.ts  useMenuData.ts  useNavigationHistory.ts  useOrionSearch.ts  usePerformance.ts  useSearchEngine.ts  useTabGroups.ts  useTabs.ts  useVoice.ts  useWorkspace.ts
src/lib/: window.ts
src/pages/: Login.tsx
src/services/: api.ts  ocrService.ts  translationService.ts
src/types/: browser.ts
(+54 files in other folders)
